--- a/Tester/Tester.csproj
+++ b/Tester/Tester.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestTypes\TestClass1.cs" />
     <Compile Include="TestTypes\TestClass2.cs" />
+    <Compile Include="TestTypes\TestClass3.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
